fix – quote with bkg on mobile spacing fix

--- a/src/scss/framework/styles/_typography.scss
+++ b/src/scss/framework/styles/_typography.scss
@@ -179,7 +179,8 @@ section[class^='PageTitle_hero'] {
 .ch-sm {
   max-width: 30ch !important;
 }
-.ch-med {
+.ch-med,
+.ch-md {
   max-width: 45ch;
 }
 .ch-lg {
